Fix the padding around the legend
A part of the colored block or line disappeared behind the legend. This
makes the block smaller and avoids overlapping blocks.

Fixes cdd68f1

--- a/src/munin-plot.css
+++ b/src/munin-plot.css
@@ -1,5 +1,5 @@
 /*!
-  Copyright (C) 2018-2020 Arthur de Jong
+  Copyright (C) 2018-2021 Arthur de Jong
 
   Permission is hereby granted, free of charge, to any person obtaining a
   copy of this software and associated documentation files (the "Software"),
@@ -106,7 +106,6 @@ body {
 }
 
 .mylegend {
-  padding: 0;
   height: 150px;
   overflow-x: hidden;
   overflow-y: auto;
